work on PUT endpoint for specific user
