# routes/userRoutes.js
@@ -31,8 +31,10 @@ usersRouter.post("/", async (req, res, next) => {
         email,
         password,
         phone,
-        unitNumber,
-        floorNumber=null,
+        seller=false,
+        unit_number,
+        floor_number=null,
+        buidling_name=null,
         street,
         city,
         postcode,
@@ -40,98 +42,107 @@ usersRouter.post("/", async (req, res, next) => {
         country
     } = req.body
 
-    // Need to encrypt the password
-
     const client = await pool.connect();
 
     try {
         await client.query('BEGIN');
 
         // Get the region id. New regions are added manually by the admin as the operations scale up
-        const regionIdQuery = `
+        const region_idQuery = `
             SELECT id
             FROM regions
             WHERE
                 zone = $1
                 AND country = $2`;
 
-        const regionIdResult = await client.query(
-            regionIdQuery,
+        const region_idResult = await client.query(
+            region_idQuery,
             [zone, country]
         );
 
-        let regionId;
+        let region_id;
 
-        if (regionIdResult.rows.length === 0) {
+        if (region_idResult.rows.length === 0) {
             throw new Error("Service not available for this region")
         } else {
-            regionId = regionIdResult.rows[0].id;
+            region_id = region_idResult.rows[0].id;
         }
         
         // Check if address already exists
         // If not, create address
         // Get the address id
-        const addressIdQuery = `
+        const address_idQuery = `
             SELECT id
             FROM address
             WHERE
                 unit_number = $1
                 AND floor_number = $2
-                AND street = $3
-                AND city = $4
-                AND postcode = $5
-                AND region_id = $6`;
+                AND buidling_name = $3
+                AND street = $4
+                AND city = $5
+                AND postcode = $6
+                AND region_id = $7`;
 
-        const addressIdResult = await client.query(
-            addressIdQuery,
+        const address_idResult = await client.query(
+            address_idQuery,
             [
-                unitNumber,
-                floorNumber,
+                unit_number,
+                floor_number,
+                buidling_name,
                 street,
                 city,
                 postcode,
-                regionId
+                region_id
             ]
         )
 
-        let addressId;
+        let address_id;
 
-        if (addressIdResult.rows.length === 0) {
+        if (address_idResult.rows.length === 0) {
             const addressInsertQuery = `
                 INSERT INTO address (
                     unit_number,
                     floor_number,
+                    buidling_name,
                     street,
                     city,
                     postcode,
                     region_id)
-                VALUES ($1, $2, $3, $4, $5, $6)
+                VALUES ($1, $2, $3, $4, $5, $6, $7)
                 RETURNING id;
             `
 
             const addressInsertResult = await client.query(
                 addressInsertQuery,
                 [
-                    unitNumber,
-                    floorNumber,
+                    unit_number,
+                    floor_number,
+                    buidling_name,
                     street,
                     city,
                     postcode,
-                    regionId
+                    region_id
                 ]
             )
 
-            addressId = addressInsertResult.rows[0].id;
+            address_id = addressInsertResult.rows[0].id;
         } else {
-            addressId = addressIdResult.rows[0].id;
+            address_id = address_idResult.rows[0].id;
         }
 
         const salt = await bcrypt.genSalt(10);
         const hash = await bcrypt.hash(password, salt);
 
         const userInsertQuery = `
-            INSERT INTO users (name, username, email, phone, password, address_id)
-            VALUES ($1, $2, $3, $4, $5, $6)
+            INSERT INTO users (
+                name, 
+                username, 
+                email, 
+                password, 
+                phone, 
+                seller, 
+                address_id)
+            VALUES ($1, $2, $3, $4, $5, $6, $7)
             RETURNING id;
         `;
         const userInsertResult = await client.query(
@@ -140,9 +151,10 @@ usersRouter.post("/", async (req, res, next) => {
                 name,
                 username,
                 email,
-                phone,
                 hash,
-                addressId
+                phone,
+                seller,
+                address_id
             ]
         );
         const userId = userInsertResult.rows[0].id;
@@ -151,7 +163,7 @@ usersRouter.post("/", async (req, res, next) => {
         await client.query('COMMIT');
 
         // Send success response
-        res.status(201).json({ message: "User created successfully", userId, addressId, regionId });
+        res.status(201).json({ message: "User created successfully", userId, address_id, region_id });
         
     } catch (err) {
         // Rollback the transaction in case of an error
@@ -168,7 +180,9 @@ usersRouter.post("/", async (req, res, next) => {
 // DRY validate userId
 usersRouter.param("userId", async (req, res, next, id) => {
     const userLoginQuery = `
-        SELECT id, name, username, email, phone, seller_id
+        SELECT 
+            id,
+            address_id
         FROM users
         WHERE id = $1`;
     
@@ -192,7 +206,152 @@ usersRouter.get("/:userId", isAuthenticated, (req, res, next) => {
     res.status(200).send(req.user);
 })
 
-usersRouter.put("/:userId", isAuthenticated, (req, res, next) => {
+usersRouter.put("/:userId", isAuthenticated, async (req, res, next) => {
+    const {
+        name,
+        username,
+        email,
+        password,
+        phone,
+        seller,
+        unit_number,
+        floor_number,
+        street,
+        city,
+        postcode,
+        zone,
+        country
+    } = req.body
+
+    const client = await pool.connect();
+
+    try {
+        await client.query('BEGIN');
+
+        let region_id;
+
+        const regionsColsObj = {
+            zone,
+            country
+        };
+
+        for (const col of Object.keys(regionsColsObj)) {
+            if (!regionsColsObj[col]) {
+                delete regionsColsObj[col];
+            }
+        }
+
+        const updateRegionsColsArr = Object.keys(regionsColsObj);
+        const updateRegionsValsArr = Object.values(regionsColsObj);
+
+        // Get the region id. New regions are added manually by the admin as the operations scale up
+        if (updateRegionsColsArr.length > 0) {
+            let columnCount = 0;
+            let whereColsStr = "";
+
+            for (const col of updateRegionsColsArr) {
+                columnCount += 1;
+                whereColsStr += `${col} = $${columnCount.toString()}${(columnCount === updateRegionsColsArr.length) ? "" : `
+                    AND `}`
+            }
+
+            const region_idQuery = `
+                SELECT id
+                FROM regions
+                WHERE ${whereColsStr}`;
+            
+            const region_idResult = await client.query(
+                region_idQuery, 
+                updateRegionsValsArr
+            );
+
+            if (region_idResult.rows.length === 0) {
+                throw new Error("Service not available for this region")
+            } else {
+                region_id = region_idResult.rows[0].id;
+            };
+
+        } 
+        
+        // If the region is not being updated, leave region_id as undefined
+    
+        const addressColsObj = {
+            unit_number,
+            floor_number,
+            street,
+            city,
+            postcode,
+            region_id
+        };
+
+        for (const col of Object.keys(addressColsObj)) {
+            if (!addressColsObj[col]) {
+                delete addressColsObj[col];
+            }
+        }
+        
+        const usersColsObj = {
+            name, 
+            username, 
+            email, 
+            hash, 
+            phone, 
+            seller,
+            address_id
+        };
+    
+        for (const col of Object.keys(usersColsObj)) {
+            if (!usersColsObj[col]) {
+                delete usersColsObj[col];
+            }
+        }
+    
+        // Split the object into two arrays: 1 for keys, 1 for values. This is needed to build the query string
+        const updateUsersColsArr = Object.keys(usersColsObj);
+        const updateUsersValsArr = Object.values(usersColsObj);
+
+        if (updateUsersColsArr.length !== 0) {
+            let columnCount = 0;
+            let updateColsStr = "";
+
+            for (const col of updateUsersColsArr) {
+                columnCount += 1;
+                updateColsStr += `${col} = $${columnCount.toString()}${(columnCount === updateUsersColsArr.length) ? "" : `,
+                    `}`
+            }
+
+            const usersUpdateQuery = `
+                UPDATE users
+                SET ${updateColsStr}
+                WHERE id = $${(columnCount + 1).toString()};
+            `;
+
+            // add the user's id to the end of the array of values
+            updateUsersValsArr.push(req.user.id)
+
+            await client.query(
+                usersUpdateQuery, 
+                updateUsersValsArr
+            );
+        }
+        
+
+        await client.query('COMMIT');
+
+        res.status(200).json({ 
+            message: "Data was successfully updated", 
+            userId: req.user.id
+        });
+
+    } catch(err) {
+        await client.query('ROLLBACK');
+        console.error(err);
+        res.status(500).json({ errorMessage: `${err.message ? err.message : "An error occurred while updating the data"}`});
+
+    } finally {
+        client.release();
+    }
+
     
 })
 
